src/css/index.css
/* Minimal themes + variations */
@import './minimal.css';
@import './theme-dark.css';
@import './theme-light.css';

/* Visual Features */
@import './features/actions.css';
@import './features/bigger-emojis.css';
@import './features/flash-tweets.css';
@import './features/gray-notif-icns.css';
@import './features/hide-context.css';
@import './features/hide-scrollbars.css';
@import './features/hide-url-thumb.css';
@import './features/no-col-icns.css';
@import './features/no-play-btn.css';
@import './features/round-pic.css';
@import './features/show-verified.css';
@import './features/small-icns.css';
@import './features/username-typeahead.css';

/* Emoji Panel */
@import './emoji-panel.css';

:root {
  /* Dark*/
  --compose-btn-bg-dark: #373839;
  --compose-btn-bg-dark-hover: color(var(--compose-btn-bg-dark) shade(20%));
  --main-bg-dark: #1d1e21;

  /* Light */
  --compose-btn-bg-light: #707375;
  --compose-btn-bg-light-hover: color(var(--compose-btn-bg-light) shade(20%));
  --main-bg-white: #ffffff;
}

[data-btdtheme] .dropdown-menu {
  z-index: 10;
}

[data-btdtheme] .js-media-image-link {
  /* Future loading bg image */
}

[data-btdtheme] .video-overlay {
  display: none;
}

[data-btdtheme] .js-media[data-key] .js-media-image-link {
  background-color: white;
}

[data-btdtheme] .js-modal-panel .js-media-image-link {
  background-color: transparent;
}

[data-btdtheme] .js-media-preview-container.is-video a {
  &::after,
  &::before {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
  }

  &::after {
    background-color: black;
    border-radius: 50%;
    opacity: 0.75;
    z-index: 98;
    width: 40px;
    height: 40px;
  }

  &::before {
    z-index: 99;
    width: calc(40px * 80 / 100);
    height: calc(40px * 80 / 100);
    opacity: .8;
    background-image: url('../icons/controller-play.svg');
  }
}

.js-add-emojis .btd-emoji-icon {
  background-image: url('../emojis/emoji-happy.svg');
}

.js-media-image-link {
  cursor: zoom-in;
}

